--- a/deploy.yaml
+++ b/deploy.yaml
@@ -28,6 +28,16 @@ spec:
       maxSurge: 25%
   revisionHistoryLimit: 10
   progressDeadlineSeconds: 600
+  triggers:
+    - type: ConfigChange
+    - type: ImageChange
+      imageChangeParams:
+        automatic: true
+        containerNames:
+        - "nodey-app"
+        from:
+          kind: ImageStreamTag
+          name: "nodey-app:latest"
 ---
 apiVersion: v1
 kind: Service
